--- a/tasks/iniSetConfiguration.yml
+++ b/tasks/iniSetConfiguration.yml
@@ -1,11 +1,11 @@
 - name: CentOS 7 - set php.ini options
   when:
-    aspects_php_config is defined and
-    item.value.enable == True and
-    ansible_distribution == "CentOS" and
-    ansible_distribution_major_version == "7" and
-    item.value.target.CentOS is defined and
-    item.value.target.CentOS.7 is defined
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "7"
+    - item.value.target.CentOS is defined
+    - item.value.target.CentOS.7 is defined
   ini_file:
     state: "present"
     dest: "{{ item.value.target.CentOS.7 }}"
@@ -15,41 +15,41 @@
     owner: 0
     group: 0
     mode: "600"
-  with_dict: "{{ aspects_php_config }}"
+  loop: "{{ aspects_php_config|dict2items }}"
   tags:
     - aspects_php
     - aspects_php_config
 
-- name: Ubuntu 14.04 - set php.ini options
+- name: OracleLinux 7 - set php.ini options
   when:
-    aspects_php_config is defined and
-    item.value.enable == True and
-    ansible_distribution == "Ubuntu" and
-    ansible_distribution_version == "14.04" and
-    item.value.target.Ubuntu is defined and
-    item.value.target.Ubuntu.1404 is defined
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "OracleLinux"
+    - ansible_distribution_major_version == "7"
+    - item.value.target.CentOS is defined
+    - item.value.target.CentOS.7 is defined
   ini_file:
     state: "present"
-    dest: "{{ item.value.target.Ubuntu.1404 }}"
+    dest: "{{ item.value.target.CentOS.7 }}"
     option: "{{ item.value.name }}"
     value: "{{ item.value.value }}"
     section: "{{ item.value.section }}"
     owner: 0
     group: 0
     mode: "600"
-  with_dict: "{{ aspects_php_config }}"
+  loop: "{{ aspects_php_config|dict2items }}"
   tags:
     - aspects_php
     - aspects_php_config
 
 - name: Ubuntu 16.04 - set php.ini options
   when:
-    aspects_php_config is defined and
-    item.value.enable == True and
-    ansible_distribution == "Ubuntu" and
-    ansible_distribution_version == "16.04" and
-    item.value.target.Ubuntu is defined and
-    item.value.target.Ubuntu.1604 is defined
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_version == "16.04"
+    - item.value.target.Ubuntu is defined
+    - item.value.target.Ubuntu.1604 is defined
   ini_file:
     state: "present"
     dest: "{{ item.value.target.Ubuntu.1604 }}"
@@ -59,19 +59,19 @@
     owner: 0
     group: 0
     mode: "600"
-  with_dict: "{{ aspects_php_config }}"
+  loop: "{{ aspects_php_config|dict2items }}"
   tags:
     - aspects_php
     - aspects_php_config
 
 - name: Ubuntu 18.04 - set php.ini options
   when:
-    aspects_php_config is defined and
-    item.value.enable == True and
-    ansible_distribution == "Ubuntu" and
-    ansible_distribution_version == "18.04" and
-    item.value.target.Ubuntu is defined and
-    item.value.target.Ubuntu.1804 is defined
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_version == "18.04"
+    - item.value.target.Ubuntu is defined
+    - item.value.target.Ubuntu.1804 is defined
   ini_file:
     state: "present"
     dest: "{{ item.value.target.Ubuntu.1804 }}"
@@ -81,19 +81,19 @@
     owner: 0
     group: 0
     mode: "600"
-  with_dict: "{{ aspects_php_config }}"
+  loop: "{{ aspects_php_config|dict2items }}"
   tags:
-  - aspects_php
-  - aspects_php_config
+    - aspects_php
+    - aspects_php_config
 
 - name: Debian 9 - set php.ini options
   when:
-    aspects_php_config is defined and
-    item.value.enable == True and
-    ansible_distribution == "Debian" and
-    ansible_distribution_major_version == "9" and
-    item.value.target.Debian is defined and
-    item.value.target.Debian.9 is defined
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "Debian"
+    - ansible_distribution_major_version == "9"
+    - item.value.target.Debian is defined
+    - item.value.target.Debian.9 is defined
   ini_file:
     state: "present"
     dest: "{{ item.value.target.Debian.9 }}"
@@ -103,7 +103,7 @@
     owner: 0
     group: 0
     mode: "600"
-  with_dict: "{{ aspects_php_config }}"
+  loop: "{{ aspects_php_config|dict2items }}"
   tags:
     - aspects_php
     - aspects_php_config
