--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,10 @@ aspects_packages_packages:
     Ubuntu:
       1604: "php-cli"
       1804: "php-cli"
+      2004: "php-cli"
+    Debian:
+      9: "php-cli"
+      10: "php-cli"
     CentOS:
       7: "php-cli"
     OracleLinux:
@@ -24,9 +28,13 @@ aspects_php_custom_config_directory:
   Ubuntu:
     1604: "/etc/php/7.0/cli/conf.d"
     1804: "/etc/php/7.2/cli/conf.d"
+    2004: "/etc/php/7.4/cli/conf.d"
   Debian:
     9: "/etc/php/7.0/cli/conf.d"
+    10: "/etc/php/7.3/cli/conf.d"
   CentOS:
+    7: "/etc/php.d"
+  OracleLinux:
     7: "/etc/php.d"
 
 aspects_php_config: {}
