--- a/tasks/iniSetConfiguration.yml
+++ b/tasks/iniSetConfiguration.yml
@@ -26,11 +26,11 @@
     - item.value.enable == True
     - ansible_distribution == "OracleLinux"
     - ansible_distribution_major_version == "7"
-    - item.value.target.CentOS is defined
-    - item.value.target.CentOS.7 is defined
+    - item.value.target.OracleLinux is defined
+    - item.value.target.OracleLinux.7 is defined
   ini_file:
     state: "present"
-    dest: "{{ item.value.target.CentOS.7 }}"
+    dest: "{{ item.value.target.OracleLinux.7 }}"
     option: "{{ item.value.name }}"
     value: "{{ item.value.value }}"
     section: "{{ item.value.section }}"
@@ -86,6 +86,28 @@
     - aspects_php
     - aspects_php_config
 
+- name: Ubuntu 20.04 - set php.ini options
+  when:
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_version == "20.04"
+    - item.value.target.Ubuntu is defined
+    - item.value.target.Ubuntu.2004 is defined
+  ini_file:
+    state: "present"
+    dest: "{{ item.value.target.Ubuntu.2004 }}"
+    option: "{{ item.value.name }}"
+    value: "{{ item.value.value }}"
+    section: "{{ item.value.section }}"
+    owner: 0
+    group: 0
+    mode: "600"
+  loop: "{{ aspects_php_config|dict2items }}"
+  tags:
+    - aspects_php
+    - aspects_php_config
+
 - name: Debian 9 - set php.ini options
   when:
     - aspects_php_config is defined
@@ -97,6 +119,28 @@
   ini_file:
     state: "present"
     dest: "{{ item.value.target.Debian.9 }}"
+    option: "{{ item.value.name }}"
+    value: "{{ item.value.value }}"
+    section: "{{ item.value.section }}"
+    owner: 0
+    group: 0
+    mode: "600"
+  loop: "{{ aspects_php_config|dict2items }}"
+  tags:
+    - aspects_php
+    - aspects_php_config
+
+- name: Debian 10 - set php.ini options
+  when:
+    - aspects_php_config is defined
+    - item.value.enable == True
+    - ansible_distribution == "Debian"
+    - ansible_distribution_major_version == "10"
+    - item.value.target.Debian is defined
+    - item.value.target.Debian.10 is defined
+  ini_file:
+    state: "present"
+    dest: "{{ item.value.target.Debian.10 }}"
     option: "{{ item.value.name }}"
     value: "{{ item.value.value }}"
     section: "{{ item.value.section }}"
